--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "immer": "^10.1.3",
     "lucide-react": "^0.545.0",
     "mathjs": "^15.0.0",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
